trunk/Archive2/9a/b24644e2d4b42a/output
main.cpp:4:16: error: missing terminating " character
      int  $0x80"
                ^
main.cpp:4:6: error: missing terminating " character
      int  $0x80"
      ^
main.cpp:2:1: error: 'as' does not name a type
 as%eax;
 ^
main.cpp:3:6: error: 'xorl' does not name a type
      xorl %%ebx,%%ebx;
      ^
main.cpp:5:5: error: expected initializer before ')' token
     );
     ^
